# typeforce

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_smoke.py
typeforce/: __init__.py  __main__.py  _cli.py  _constants.py  _core.py  _script_inspect.py  _script_sites.py
